infrastructure/manifests/network/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fortified-crm-fleet
  namespace: fortified-crm-fleet
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    # Must match google_compute_global_address.fortified-crm-fleet-domain.name
    kubernetes.io/ingress.global-static-ip-name: fortified-crm-fleet
    networking.gke.io/managed-certificates: fortified-crm-fleet-subdomian
    networking.gke.io/v1beta1.FrontendConfig: "fortified-crm-fleet-frontend"
spec:
  defaultBackend:
    service:
      name: frontend
      port:
        number: 8080
  rules:
    - host: "fortified-crm-fleet.wolfcore.app"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 8080
